restaurant_BE/restaurant/restaurant/src/main/java/restaurant/example/restaurant/util/error/OrderException.java
package restaurant.example.restaurant.util.error;

// khai báo  exception 
public class OrderException extends Exception {
    // Constructor that accepts a message
    public OrderException(String message) {
        super(message);
    }
}
